--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,8 @@
 /* Add CSS Styling */
+.container .text{
+    color: red;
+    background-color: yellow;
+    font-size: 20px;
+    text-align: center;
+
+}
